force-app/main/default/objects/myMobility_Project_Task__mdt/myMobility_Project_Task__mdt.object-meta.xml
<CustomObject>
    <label>myMobility Project Task</label>
    <pluralLabel>myMobility Project Tasks</pluralLabel>
</CustomObject>