force-app/main/default/objects/myMobility_Project_Task__mdt/fields/Instructions__c.field-meta.xml
<CustomField>
    <fullName>Instructions__c</fullName>
    <label>Instructions</label>
    <type>TextArea</type>
</CustomField>