force-app/main/default/objects/myMobility_Project_Task__mdt/fields/Related_File_Location__c.field-meta.xml
<CustomField>
    <fullName>Related_File_Location__c</fullName>
    <label>Related File Location</label>
    <type>Url</type>
</CustomField>